feat(api): expand HTTP server to support node rendering and I18n data
